--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
+    "react-mouse-particles": "^1.1.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
