--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/index.js", "src/components/Main.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx","**/*.js", "**/*.jsx"],
   "exclude": ["node_modules"]
 }
