--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
