--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/form": "^4.2.10",
     "@mantine/hooks": "^4.2.10",
     "@mantine/next": "^4.2.10",
+    "lottie-react": "^2.3.1",
     "next": "12.1.6",
     "randomcolor": "^0.6.2",
     "react": "18.2.0",
