--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@mantine/form": "^4.2.10",
     "@mantine/hooks": "^4.2.10",
     "@mantine/next": "^4.2.10",
+    "@next/font": "^13.1.1",
     "lottie-react": "^2.3.1",
-    "next": "12.1.6",
+    "next": "^13.1.1",
     "randomcolor": "^0.6.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-mouse-particles": "^1.1.5",
     "uuid": "^8.3.2"
@@ -30,7 +31,7 @@
     "autoprefixer": "^10.4.7",
     "classcat": "^5.0.3",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^13.1.1",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
